--- a/extscript-examples/pom.xml
+++ b/extscript-examples/pom.xml
@@ -61,21 +61,7 @@
                     <port>9080</port>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>8.1.2.v20120308</version>
-                <configuration>
-                    <connectors>
-                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                            <port>9090</port>
-                            <maxIdleTime>60000</maxIdleTime>
-                        </connector>
-                    </connectors>
-                    <scanIntervalSeconds>1</scanIntervalSeconds>
 
-                </configuration>
-            </plugin>
             <!-- tomcat plugin as alternative testing ground -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -111,6 +97,89 @@
             <properties>
                 <maven.war.webxml>${basedir}/src/main/conf/dev/web.xml</maven.war.webxml>
             </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.mortbay.jetty</groupId>
+                        <artifactId>jetty-maven-plugin</artifactId>
+                        <version>8.1.2.v20120308</version>
+                        <configuration>
+                            <connectors>
+                                <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                                    <port>9090</port>
+                                    <maxIdleTime>60000</maxIdleTime>
+                                </connector>
+                            </connectors>
+                            <scanIntervalSeconds>1</scanIntervalSeconds>
+                            <webAppConfig>
+                                <overrideDescriptor>
+                                    src/main/myfaces/override-myfaces-web.xml
+                                </overrideDescriptor>
+                            </webAppConfig>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <!-- we use different profiles for jetty and myfaces so that their respective listeners are fetched -->
+        <profile>
+            <id>myfaces</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.mortbay.jetty</groupId>
+                        <artifactId>jetty-maven-plugin</artifactId>
+                        <version>8.1.2.v20120308</version>
+                        <configuration>
+                            <connectors>
+                                <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                                    <port>9090</port>
+                                    <maxIdleTime>60000</maxIdleTime>
+                                </connector>
+                            </connectors>
+                            <scanIntervalSeconds>1</scanIntervalSeconds>
+                            <webAppConfig>
+                                <overrideDescriptor>
+                                    src/main/myfaces/override-web.xml
+                                </overrideDescriptor>
+                            </webAppConfig>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>mojarra</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.mortbay.jetty</groupId>
+                        <artifactId>jetty-maven-plugin</artifactId>
+                        <version>8.1.2.v20120308</version>
+                        <configuration>
+                            <connectors>
+                                <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                                    <port>9090</port>
+                                    <maxIdleTime>60000</maxIdleTime>
+                                </connector>
+                            </connectors>
+                            <scanIntervalSeconds>1</scanIntervalSeconds>
+                            <webAppConfig>
+                                <overrideDescriptor>
+                                    src/main/mojarra/override-web.xml
+                                </overrideDescriptor>
+                            </webAppConfig>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 
