--- a/extscript-examples/myfaces20-example/pom.xml
+++ b/extscript-examples/myfaces20-example/pom.xml
@@ -86,7 +86,7 @@
                  <dependency>
                      <groupId>org.apache.myfaces.extensions.scripting</groupId>
                      <artifactId>extscript-mojarra-bundle</artifactId>
-                     <version>1.0.5-SNAPSHOT</version>
+                     <version>1.0.5</version>
                  </dependency>
 
             </dependencies>
@@ -114,7 +114,7 @@
                 <dependency>
                     <groupId>org.apache.myfaces.extensions.scripting</groupId>
                     <artifactId>extscript-myfaces20-bundle</artifactId>
-                    <version>1.0.5-SNAPSHOT</version>
+                    <version>1.0.5</version>
                 </dependency>
 
             </dependencies>
