--- a/extscript-examples/myfaces20-extscript-helloworld/pom.xml
+++ b/extscript-examples/myfaces20-extscript-helloworld/pom.xml
@@ -71,7 +71,7 @@
                 <dependency>
                     <groupId>org.apache.myfaces.extensions.scripting</groupId>
                     <artifactId>extscript-myfaces20-bundle</artifactId>
-                    <version>1.0.5-SNAPSHOT</version>
+                    <version>1.0.5</version>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.myfaces.core</groupId>
