--- a/extscript-examples/cdi-example/pom.xml
+++ b/extscript-examples/cdi-example/pom.xml
@@ -191,7 +191,7 @@
                     <dependency>
                         <groupId>org.apache.myfaces.extensions.scripting</groupId>
                         <artifactId>extscript-myfaces20-bundle</artifactId>
-                        <version>1.0.5-SNAPSHOT</version>
+                        <version>1.0.5</version>
                     </dependency>
 
                 </dependencies>
