--- a/extscript-bundles/extscript-myfaces20-bundle/pom.xml
+++ b/extscript-bundles/extscript-myfaces20-bundle/pom.xml
@@ -24,7 +24,7 @@
     <artifactId>extscript-myfaces20-bundle</artifactId>
     <packaging>jar</packaging>
     <name>MyFaces Extension Scripting MyFaces 2.0 convenience meta bundle</name>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.0.6</version>
 
     <description>
         The meta bundle bundeling all needed core runtimes
@@ -34,18 +34,18 @@
     <parent>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-bundles</artifactId>
-        <version>1.0.6-SNAPSHOT</version>
+        <version>1.0.6</version>
     </parent>
 
     <scm>
         <connection>
-            scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-bundles/extscript-myfaces20-bundle
+            scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.6/extscript-bundles/extscript-myfaces20-bundle
         </connection>
         <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-bundles/extscript-myfaces20-bundle
+            scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.6/extscript-bundles/extscript-myfaces20-bundle
         </developerConnection>
         <url>
-            http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-bundles/extscript-myfaces20-bundle
+            http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.6/extscript-bundles/extscript-myfaces20-bundle
         </url>
     </scm>
 
@@ -53,12 +53,12 @@
         <dependency>
             <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-core</artifactId>
-            <version>1.0.6-SNAPSHOT</version>
+            <version>1.0.6</version>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-myfaces</artifactId>
-            <version>1.0.6-SNAPSHOT</version>
+            <version>1.0.6</version>
         </dependency>
 
     </dependencies>
