--- a/extscript-examples/pom.xml
+++ b/extscript-examples/pom.xml
@@ -22,7 +22,7 @@
     <artifactId>extscript-examples</artifactId>
     <packaging>pom</packaging>
     <name>Examples Submodule</name>
-    <version>1.0.6</version>
+    <version>1.0.7-SNAPSHOT</version>
 
     <description>
         Examples Meta Project, see the subprojects
@@ -35,17 +35,17 @@
     <parent>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-root</artifactId>
-        <version>1.0.6</version>
+        <version>1.0.7-SNAPSHOT</version>
     </parent>
 
     <scm>
         <connection>
-            scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.6/extscript-examples
+            scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-examples
         </connection>
         <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.6/extscript-examples
+            scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-examples
         </developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.6/extscript-examples
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-examples
         </url>
     </scm>
 
